--- a/workExp.html
+++ b/workExp.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julie Nguyen | Web Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            border: solid 3px black;
-            padding: 20px;
-        }
-    </style>
 </head>
 <body>
-    <header>
+    <header id="workexppageHeader">
         <h1><a href="index.html">Julie Nguyen | Web Portfolio</a></h1>
         <nav>
             <ul>
@@ -22,15 +19,16 @@
                 <li><a href="workExp.html">Work Experience</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="experiments.html">Experiments</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <section>
-            <h2>Work Experience</h2>
-            <div class="workExpItem">
+    <img id="backgroundImg" src="./media/laptop.avif" alt="laptop photo">
+
+    <main id="workexppageMain">
+        <section id="workexppageSection">
+            <h2>WORK EXPERIENCE</h2>
+            <div class="workexpItem">
                 <hgroup>
                     <h3>Laboratory Aide</h3>
                     <h4>Loma Linda University</h4>
@@ -41,12 +39,12 @@
                         United States · On-site
                     </address>
                 </hgroup>
-                <p>Biomedical Research Project: The Expression Pattern of Aggrecan During Joint-Formation In Chicken Limbs Suggests Regulation Independent Of GDF5. <br />
+                <p>Biomedical Research Project: The Expression Pattern of Aggrecan During Joint-Formation In Chicken Limbs Suggests Regulation Independent Of GDF5. <br /> <br />
                     I performed biomedical research at the Department of Pathology and Human Anatomy at Loma Linda University. I ran various biological assays, made buffers, and presented research data on a weekly basis. I worked on a team with medical and Ph.D. students.
                 </p>
             </div>
             <hr>
-            <div class="workExpItem">
+            <div class="workexpItem">
                 <hgroup>
                     <h3>Laboratory Aide</h3>
                     <h4>Loma Linda University</h4>
@@ -57,16 +55,14 @@
                         United States · On-site
                     </address>
                 </hgroup>
-                <p>Biomedical Research Project: Determining the differential expressions of miR-323b-3p, PDLIM7, and C-Myc specifically in Filipino and European American patients. <br />
+                <p>Biomedical Research Project: Determining the differential expressions of miR-323b-3p, PDLIM7, and C-Myc specifically in Filipino and European American patients. <br /> <br />
                     I performed biomedical research at the Department of Biochemistry at Loma Linda University. I ran various biological assays, made buffers, and presented research data on a weekly basis. I worked on a team with medical and Ph.D. students.
                 </p>
             </div>
         </section>
     </main>
-
-    <hr>
     
-    <footer>
+    <footer id="workexppageFooter">
         <p>Julie Nguyen | 2025</p>
     </footer>
 </body>
